
-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.23:

-BUG FIX: Miscellaneous fixes

-Support for PHPbrowserBox (new / more reliable app container for Windows Desktop Editions)

-More reliable system checks (during preflight checks) for missing PHP extensions

-Miscellaneous user experience improvements

-Better Desktop Editions support

-More reliable text resizing

-Code optimization / cleanup

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.24:

-BUG FIX: Miscellaneous fixes

-Improvements to the Alphavantage Stock API rate-limiting, to support many more stock assets in the portfolio assets config (without going over the free plan's rate limits)

-Auto-pruning of bitcoin (primary) currency / (secondary) crypto pairing markets user configs, IF markets don't exist in assets config

-Less clutter in error logs, and new debugging mode for API rate-limiting / throttling

-Added more fiat currency markets (to offset localbitcoins shutting down)

-Removed localbitcoins support (they went out of business)

-Miscellaneous user experience improvements

-More reliable page zooming / resizing

-Added Bitcoin NFT tracking support

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.25:

-BUG FIX: TBD

-Upgraded to Jupiter Aggregator's v4 price API, allowing efficient API calls for multiple token prices

-Added styling, so printing out the portfolio page automatically looks good / fits on printer paper

-Updated the DEMO asset markets / news feeds

-Miscellaneous user experience improvements

-------------------------------------------------------------------








